--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
 								<!-- name-and-slogan -->
 								<div class="site-slogan">
-									Next-Generation Sequencing (NGS)
+									Next Generation Genomics (NGG)
 								</div>
 
 							</div>
@@ -757,14 +757,14 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-12">
-								<h1 class="text-center title">Features</h1>
+								<h1 class="text-center title">Products & Services</h1>
 								<div class="separator"></div>
-								<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								<p class="text-center">Solivar Products and Services are focused in developing technologies and people for Next Generation Genomics</p>
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="0">
 											<i class="fa fa-leaf"></i>
-											<h2>Clean Design and Code</h2>
+											<h2>Products</h2>
 											<p>Voluptatem ad provident non <a href="#">repudiandae</a> veritatis beatae cupiditate amet reiciendis.</p>
 											<a href="page-services.html" class="btn-default btn">Read More</a>
 										</div>
@@ -772,7 +772,7 @@
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="200">
 											<i class="fa fa-laptop"></i>
-											<h2>Very Flexible</h2>
+											<h2>Consulting</h2>
 											<p>Iure sequi unde hic. Sapiente quaerat labore sequi inventore veritatis cumque.</p>
 											<a href="page-services.html" class="btn-default btn">Read More</a>
 										</div>
@@ -780,7 +780,7 @@
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="400">
 											<i class="fa fa-sitemap"></i>
-											<h2>Latest Technologies</h2>
+											<h2>Training</h2>
 											<p>Inventore dolores aut laboriosam cum consequuntur delectus sequi! Eum est.</p>
 											<a href="page-services.html" class="btn-default btn">Read More</a>
 										</div>
