--- a/index.html
+++ b/index.html
@@ -66,154 +66,6 @@
 		<!-- ================ -->
 		<div class="page-wrapper">
 
-			<!-- header-top start (Add "dark" class to .header-top in order to enable dark header-top e.g <div class="header-top dark">) -->
-			<!-- ================ -->
-			<div class="header-top">
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-2 col-sm-6">
-
-							<!-- header-top-first start -->
-							<!-- ================ -->
-							<div class="header-top-first clearfix">
-								<ul class="social-links clearfix hidden-xs">
-									<li class="twitter"><a target="_blank" href="http://www.twitter.com"><i class="fa fa-twitter"></i></a></li>
-									<li class="skype"><a target="_blank" href="http://www.skype.com"><i class="fa fa-skype"></i></a></li>
-									<li class="linkedin"><a target="_blank" href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
-									<li class="googleplus"><a target="_blank" href="http://plus.google.com"><i class="fa fa-google-plus"></i></a></li>
-									<li class="youtube"><a target="_blank" href="http://www.youtube.com"><i class="fa fa-youtube-play"></i></a></li>
-									<li class="flickr"><a target="_blank" href="http://www.flickr.com"><i class="fa fa-flickr"></i></a></li>
-									<li class="facebook"><a target="_blank" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
-									<li class="pinterest"><a target="_blank" href="http://www.pinterest.com"><i class="fa fa-pinterest"></i></a></li>
-								</ul>
-								<div class="social-links hidden-lg hidden-md hidden-sm">
-									<div class="btn-group dropdown">
-										<button type="button" class="btn dropdown-toggle" data-toggle="dropdown"><i class="fa fa-share-alt"></i></button>
-										<ul class="dropdown-menu dropdown-animation">
-											<li class="twitter"><a target="_blank" href="http://www.twitter.com"><i class="fa fa-twitter"></i></a></li>
-											<li class="skype"><a target="_blank" href="http://www.skype.com"><i class="fa fa-skype"></i></a></li>
-											<li class="linkedin"><a target="_blank" href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
-											<li class="googleplus"><a target="_blank" href="http://plus.google.com"><i class="fa fa-google-plus"></i></a></li>
-											<li class="youtube"><a target="_blank" href="http://www.youtube.com"><i class="fa fa-youtube-play"></i></a></li>
-											<li class="flickr"><a target="_blank" href="http://www.flickr.com"><i class="fa fa-flickr"></i></a></li>
-											<li class="facebook"><a target="_blank" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
-											<li class="pinterest"><a target="_blank" href="http://www.pinterest.com"><i class="fa fa-pinterest"></i></a></li>
-										</ul>
-									</div>
-								</div>
-							</div>
-							<!-- header-top-first end -->
-
-						</div>
-						<div class="col-xs-10 col-sm-6">
-
-							<!-- header-top-second start -->
-							<!-- ================ -->
-							<div id="header-top-second"  class="clearfix">
-
-								<!-- header top dropdowns start -->
-								<!-- ================ -->
-								<div class="header-top-dropdown">
-									<div class="btn-group dropdown">
-										<button type="button" class="btn dropdown-toggle" data-toggle="dropdown"><i class="fa fa-search"></i> Search</button>
-										<ul class="dropdown-menu dropdown-menu-right dropdown-animation">
-											<li>
-												<form role="search" class="search-box">
-													<div class="form-group has-feedback">
-														<input type="text" class="form-control" placeholder="Search">
-														<i class="fa fa-search form-control-feedback"></i>
-													</div>
-												</form>
-											</li>
-										</ul>
-									</div>
-									<div class="btn-group dropdown">
-										<button type="button" class="btn dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Login</button>
-										<ul class="dropdown-menu dropdown-menu-right dropdown-animation">
-											<li>
-												<form class="login-form">
-													<div class="form-group has-feedback">
-														<label class="control-label">Username</label>
-														<input type="text" class="form-control" placeholder="">
-														<i class="fa fa-user form-control-feedback"></i>
-													</div>
-													<div class="form-group has-feedback">
-														<label class="control-label">Password</label>
-														<input type="password" class="form-control" placeholder="">
-														<i class="fa fa-lock form-control-feedback"></i>
-													</div>
-													<button type="submit" class="btn btn-group btn-dark btn-sm">Log In</button>
-													<span>or</span>
-													<button type="submit" class="btn btn-group btn-default btn-sm">Sign Up</button>
-
-													<ul>
-														<li><a href="#">Forgot your password?</a></li>
-													</ul>
-													<div class="divider"></div>
-													<span class="text-center">Login with</span>
-													<ul class="social-links clearfix">
-														<li class="facebook"><a target="_blank" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
-														<li class="twitter"><a target="_blank" href="http://www.twitter.com"><i class="fa fa-twitter"></i></a></li>
-														<li class="googleplus"><a target="_blank" href="http://plus.google.com"><i class="fa fa-google-plus"></i></a></li>
-													</ul>
-												</form>
-											</li>
-										</ul>
-									</div>
-									<div class="btn-group dropdown">
-										<button type="button" class="btn dropdown-toggle" data-toggle="dropdown"><i class="fa fa-shopping-cart"></i> Cart (8)</button>
-										<ul class="dropdown-menu dropdown-menu-right dropdown-animation cart">
-											<li>
-												<table class="table table-hover">
-													<thead>
-														<tr>
-															<th class="quantity">QTY</th>
-															<th class="product">Product</th>
-															<th class="amount">Subtotal</th>
-														</tr>
-													</thead>
-													<tbody>
-														<tr>
-															<td class="quantity">2 x</td>
-															<td class="product"><a href="shop-product.html">Android 4.4 Smartphone</a><span class="small">4.7" Dual Core 1GB</span></td>
-															<td class="amount">$199.00</td>
-														</tr>
-														<tr>
-															<td class="quantity">3 x</td>
-															<td class="product"><a href="shop-product.html">Android 4.2 Tablet</a><span class="small">7.3" Quad Core 2GB</span></td>
-															<td class="amount">$299.00</td>
-														</tr>
-														<tr>
-															<td class="quantity">3 x</td>
-															<td class="product"><a href="shop-product.html">Desktop PC</a><span class="small">Quad Core 3.2MHz, 8GB RAM, 1TB Hard Disk</span></td>
-															<td class="amount">$1499.00</td>
-														</tr>
-														<tr>
-															<td class="total-quantity" colspan="2">Total 8 Items</td>
-															<td class="total-amount">$1997.00</td>
-														</tr>
-													</tbody>
-												</table>
-												<div class="panel-body text-right">	
-												<a href="shop-cart.html" class="btn btn-group btn-default btn-sm">View Cart</a>
-												<a href="shop-checkout.html" class="btn btn-group btn-default btn-sm">Checkout</a>
-												</div>
-											</li>
-										</ul>
-									</div>
-
-								</div>
-								<!--  header top dropdowns end -->
-
-							</div>
-							<!-- header-top-second end -->
-
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- header-top end -->
-
 			<!-- header start classes:
 				fixed: fixed navigation mode (sticky menu) e.g. <header class="header fixed clearfix">
 				 dark: dark header version e.g. <header class="header dark clearfix">
@@ -234,7 +86,7 @@
 
 								<!-- name-and-slogan -->
 								<div class="site-slogan">
-									Next Generation Genomics (NGG)
+									Doing our part to find a cure for cancer
 								</div>
 
 							</div>
@@ -274,7 +126,7 @@
 														
 													</li>
 													<li>
-														<a href="#areas_of_interest" class="get_link dropdown-toggle">Technology</a>
+														<a href="#areas_of_interest" class="get_link dropdown-toggle">BioInformatics</a>
 														
 													</li>													
 													<!-- mega-menu start -->
@@ -577,9 +429,8 @@
 									data-speed="600"
 									data-start="1200"
 									data-end="9400"
-									data-endspeed="600">Clean &amp; Unique Design
+									data-endspeed="600">Doing our part to find a cure for cancer
 								</div>
-
 								<!-- LAYER NR. 2 -->
 								<div class="tp-caption dark_gray_bg sfl medium tp-resizeme"
 									data-x="0"
@@ -707,40 +558,18 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
 							<div class="call-to-action">
-								<h1 class="title">iDea Clean and Unique Design</h1>
-								<p>Sed ut Perspiciatis Unde Omnis Iste Sed ut perspiciatis unde omnis iste natu error sit  voluptatem accusan tium </p>
-								<a class="btn btn-white more" data-toggle="modal" data-target="#myModal">
-								Read more <i class="pl-10 fa fa-info"></i>
-								</a>
-
-								<!-- Modal -->
-								<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-									<div class="modal-dialog">
-										<div class="modal-content">
-											<div class="modal-header">
-												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="myModalLabel">iDea Clean and Unique Design</h4>
-											</div>
-											<div class="modal-body">
-												<p>Consectetur adipisicing elit. Nemo architecto debitis dolorum ullam in ut sint, odit maiores eaque explicabo, repellendus minima soluta sunt! Nisi minima blanditiis voluptate, ut atque.</p>
-												<ul class="list-icons">
-													<li><i class="icon-check"></i> Nisi minima blanditiis voluptate</li>
-													<li><i class="icon-check"></i> Officiis nisi nam doloribus explicabo</li>
-													<li><i class="icon-check"></i> Debitis delectus corporis aspernatur</li>
-													<li><i class="icon-check"></i> Dolore temporibus odio distinctio</li>
-													<li><i class="icon-check"></i> Reprehenderit optio unde accusantium quia</li>
-												</ul>
-												<p>Culpa expedita! Quisquam, itaque officiis nisi nam doloribus explicabo possimus, dolorum alias provident maxime temporibus, enim voluptatibus! Molestias, accusantium cum impedit sint velit exercitationem deserunt, corporis magni provident earum, ullam iusto voluptatem iste animi inventore ab cupiditate quod laborum quasi libero doloremque obcaecati eius. Ut, reprehenderit optio unde accusantium quia qui! Debitis delectus corporis aspernatur nemo aut, odio harum ea repellendus quidem, saepe, incidunt? Assumenda deserunt unde minima aspernatur ducimus velit molestiae, minus eius inventore, dolore temporibus odio distinctio optio.</p>
-											</div>
-											<div class="modal-footer">
-												<button type="button" class="btn btn-sm btn-default" data-dismiss="modal"><i class="icon-check"></i> Ok</button>
-											</div>
-										</div>
-									</div>
+								<h1 class="title">BioInformatics</h1>
+								<p>BioInformatics is an interdisciplinary field that develops methods and software tools for understanding biological data. As an interdisciplinary field of science, bioinformatics combines computer science, statistics, mathematics, and engineering to analyze and interpret biological data.
+								</p>
+								<div class="tp-caption sfr tp-resizeme"
+									data-x="right"
+									data-y="center" 
+									data-speed="600"
+									data-start="2700"
+									data-end="9400"
+									data-endspeed="600"><img src="images/Bioinformatics.png" alt="">
 								</div>
-								or
-								<a href="page-contact.html" class="btn btn-default contact">Contact us <i class="pl-10 fa fa-phone"></i></a>
-							</div>
+
 						</div>
 					</div>
 				</div>
