--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 								<!-- name-and-slogan -->
 								<div class="site-slogan">
-									Doing our part to find a cure for cancer
+									Next Generation Genomics
 								</div>
 
 							</div>
@@ -569,7 +569,7 @@
 									data-end="9400"
 									data-endspeed="600"><img src="images/Bioinformatics.png" alt="">
 								</div>
-
+							</div>
 						</div>
 					</div>
 				</div>
@@ -601,7 +601,7 @@
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="200">
 											<i class="fa fa-laptop"></i>
-											<h2>Consulting</h2>
+											<h2>Research</h2>
 											<p>Iure sequi unde hic. Sapiente quaerat labore sequi inventore veritatis cumque.</p>
 											<a href="page-services.html" class="btn-default btn">Read More</a>
 										</div>
@@ -630,7 +630,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<h1 class="text-center">About Us</h1>
+							<h1 class="text-center">Jobs / Interns</h1>
 							<div class="separator"></div>
 							<p class="lead text-center">Lorem ipsum dolor sit amet laudantium molestias similique.<br> Quisquam incidunt ut laboriosam.</p>
 							<br>
@@ -926,7 +926,7 @@
 					<div class="row">
 						<div class="col-md-12">
 
-							<h2>Our Work</h2>
+							<h2>Our Partners / Our Clients / Leading Thinkers in Genomics</h2>
 							<div class="separator-2"></div>
 							<p>Sed ut Perspiciatis Unde Omnis Iste Sed ut sit  voluptatem accusan tium </p>
 							<div class="owl-carousel carousel">
