--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 									data-speed="600"
 									data-start="1600"
 									data-end="9400"
-									data-endspeed="600">After Sale Support
+									data-endspeed="600">Assembling the best of breed for technologies
 								</div>
 
 								<!-- LAYER NR. 4 -->
@@ -587,7 +587,7 @@
 									data-speed="600"
 									data-start="1800"
 									data-end="9400"
-									data-endspeed="600">Crystal Clean Code
+									data-endspeed="600">Teaching and preparing the right BioInformatic Specialists
 								</div>
 
 								<!-- LAYER NR. 6 -->
@@ -607,7 +607,7 @@
 									data-speed="600"
 									data-start="2000"
 									data-end="9400"
-									data-endspeed="600">Crossbrowser Compatible
+									data-endspeed="600">Finally assemble a team, process and technologies working together
 								</div>
 
 								<!-- LAYER NR. 8 -->
@@ -675,19 +675,12 @@
 			<div class="section clearfix page-top" id="areas_of_interest">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-8 col-md-offset-2">
+						<div class="col-md-10 col-md-offset-1">
 							<div class="call-to-action">
 								<h1 class="title">BioInformatics</h1>
-								<p>BioInformatics is an interdisciplinary field that develops methods and software tools for understanding biological data. As an interdisciplinary field of science, bioinformatics combines computer science, statistics, mathematics, and engineering to analyze and interpret biological data.
+								<img class="displayed" src="images/Bioinformatics.png" alt="">
+								<p>BioInformatics is an interdisciplinary field that develops methods and software tools for understanding biological data. As an interdisciplinary field of science, bioinformatics combines computer science, statistics, mathematics, and engineering to analyze and interpret biological data. Bioinformatics is both an umbrella term for the body of biological studies that use computer programming as part of their methodology, as well as a reference to specific analysis "pipelines" that are repeatedly used, particularly in the fields of genetics and genomics. Common uses of bioinformatics include the identification of candidate genes and nucleotides (SNPs). Often, such identification is made with the aim of better understanding the genetic basis of disease, unique adaptations, desirable properties (esp. in agricultural species), or differences between populations. In a less formal way, bioinformatics also tries to understand the organisational principles within nucleic acid and protein sequences.
 								</p>
-								<div class="tp-caption sfr tp-resizeme"
-									data-x="right"
-									data-y="center" 
-									data-speed="600"
-									data-start="2700"
-									data-end="9400"
-									data-endspeed="600"><img src="images/Bioinformatics.png" alt="">
-								</div>
 							</div>
 						</div>
 					</div>
@@ -713,24 +706,21 @@
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="0">
 											<i class="fa fa-leaf"></i>
 											<h2>Products</h2>
-											<p>Voluptatem ad provident non <a href="#">repudiandae</a> veritatis beatae cupiditate amet reiciendis.</p>
-											<a href="page-services.html" class="btn-default btn">Read More</a>
+											<p> Solivar's selects technologies, products and people to “create a best of breed informatics organization” from the basics of biology and genetics to application of semantic technologies. Through modeling, case studies, and best practice examples, our products will demonstrate techniques on how to combine data in a meaningful way. </p>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="200">
 											<i class="fa fa-laptop"></i>
-											<h2>Research</h2>
-											<p>Iure sequi unde hic. Sapiente quaerat labore sequi inventore veritatis cumque.</p>
-											<a href="page-services.html" class="btn-default btn">Read More</a>
+											<h2>Research Assistance</h2>
+											<p>Solivar can help you first create proposal ideas through the illumination of important research issues within most topic areas. We can then provide you with a thorough literature review that can be used as the foundation for specific research questions or hypotheses. We also offer consultation on appropriate methodological procedures and statistical techniques; Processing and analysis of statistical data and Written drafts of Methodology and Results. </p>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="400">
 											<i class="fa fa-sitemap"></i>
 											<h2>Training</h2>
-											<p>Inventore dolores aut laboriosam cum consequuntur delectus sequi! Eum est.</p>
-											<a href="page-services.html" class="btn-default btn">Read More</a>
+											<p> Building people for Genomics is one of the main focus for Solivar. We have special training for students </p>
 										</div>
 									</div>
 								</div>
