--- a/index.html
+++ b/index.html
@@ -675,11 +675,11 @@
 			<div class="section clearfix page-top" id="areas_of_interest">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-10 col-md-offset-1">
+						<div "class="col-md-12"">
 							<div class="call-to-action">
 								<h1 class="title">BioInformatics</h1>
 								<img class="displayed" src="images/Bioinformatics.png" alt="">
-								<p>BioInformatics is an interdisciplinary field that develops methods and software tools for understanding biological data. As an interdisciplinary field of science, bioinformatics combines computer science, statistics, mathematics, and engineering to analyze and interpret biological data. Bioinformatics is both an umbrella term for the body of biological studies that use computer programming as part of their methodology, as well as a reference to specific analysis "pipelines" that are repeatedly used, particularly in the fields of genetics and genomics. Common uses of bioinformatics include the identification of candidate genes and nucleotides (SNPs). Often, such identification is made with the aim of better understanding the genetic basis of disease, unique adaptations, desirable properties (esp. in agricultural species), or differences between populations. In a less formal way, bioinformatics also tries to understand the organisational principles within nucleic acid and protein sequences.
+								<p align="justify">BioInformatics is an interdisciplinary field that develops methods and software tools for understanding biological data. As an interdisciplinary field of science, bioinformatics combines computer science, statistics, mathematics, and engineering to analyze and interpret biological data. Bioinformatics is both an umbrella term for the body of biological studies that use computer programming as part of their methodology, as well as a reference to specific analysis "pipelines" that are repeatedly used, particularly in the fields of genetics and genomics. Common uses of bioinformatics include the identification of candidate genes and nucleotides (SNPs). Often, such identification is made with the aim of better understanding the genetic basis of disease, unique adaptations, desirable properties (esp. in agricultural species), or differences between populations. In a less formal way, bioinformatics also tries to understand the organisational principles within nucleic acid and protein sequences.
 								</p>
 							</div>
 						</div>
@@ -741,36 +741,34 @@
 						<div class="col-md-12">
 							<h1 class="text-center">Jobs / Interns</h1>
 							<div class="separator"></div>
-							<p class="lead text-center">Lorem ipsum dolor sit amet laudantium molestias similique.<br> Quisquam incidunt ut laboriosam.</p>
+							<p class="lead text-center">Solivar Labs is looking for teachers and interns to build and shape an environment that would help create an ecosystem that will encourage and find a cure for cancer.</p>
 							<br>
 							<div class="row">
 								<div class="col-md-6">
-									<h2 class="title">iDea - Responsive Website Theme</h2>
+									<h2 class="title">Join the team and make a difference</h2>
 									<div class="row">
 										<div class="col-md-6">
-											<img src="images/section-image-2.png" alt="">
+											<img src="images/people.png" alt="">
 										</div>
 										<div class="col-md-6">
 											<p>Quo soluta provident, quod reiciendis. Dolores nam totam aut illum ex ratione harum molestias maxime minima tempore, possimus, laudantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 										</div>
 									</div>
 									<p>Esse sequi veniam, assumenda voluptate necessitatibus ipsa dicta vero, minima natus cum cupiditate magnam et placeat quo adipisci.</p>
-									<a href="page-about.html" class="btn btn-white">Learn More</a>
-									<div class="space hidden-md hidden-lg"></div>
 								</div>
 								<div class="col-md-6">
 									<div class="panel-group panel-dark" id="accordion">
 										<div class="panel panel-default">
 											<div class="panel-heading">
 												<h4 class="panel-title">
-													<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-														<i class="fa fa-bold"></i>Bootstrap Based
+													<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="collapsed">
+														<i class="fa fa-bold"></i>BioInformatics Teacher
 													</a>
 												</h4>
 											</div>
 											<div id="collapseOne" class="panel-collapse collapse in">
 												<div class="panel-body">
-													Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+													We are seeking candidates with a research program in the area of experimental genomics (or other -omic areas) with a significant computational, statistical or modeling component. Candidates should have a significant interest in education and be dedicated to becoming an excellent undergraduate teacher. The successful candidate will be expected to teach courses that contribute to the integration of computational and quantitative approaches curriculum. These may include lecture and laboratory courses in introductory biology, molecular biology, and genetics/genomics. In addition, the successful candidate will develop a vigorous, externally funded, experimental research program involving undergraduate students. A Ph.D. is required and postdoctoral research experience is highly desirable. Applicants should submit a cover letter, curriculum vitae, a 2-page statement of teaching experience and interests, a 2-page statement of externally-fundable research plans, and three letters of recommendation as PDF files. Application materials should explicitly address how the applicant’s teaching and research will take advantage of the unique  teaching model offered by the Solivar Labs.
 												</div>
 											</div>
 										</div>
@@ -778,27 +776,41 @@
 											<div class="panel-heading">
 												<h4 class="panel-title">
 													<a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapsed">
-														<i class="fa fa-leaf"></i>Clean &amp; powerful code
+														<i class="fa fa-leaf"></i>Research Scientists
 													</a>
 												</h4>
 											</div>
 											<div id="collapseTwo" class="panel-collapse collapse">
 												<div class="panel-body">
-													Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+													A part-time Research Scientist position is available with Solivar Labs, a full service diagnostic laboratory that strives to provide cutting edge genomics tests.  As part of the Genomics R&D team the candidate will improve current Next Generation Sequencing (NGS) workflows as well as bring on new technologies and develop novel assays and approaches. The position requires the candidate to engage in fundamental assay development and seamlessly transition their work into the clinical setting. The candidate should be efficient at acquiring new technical skills and driven to see projects through. 
 												</div>
 											</div>
 										</div>
 										<div class="panel panel-default">
 											<div class="panel-heading">
 												<h4 class="panel-title">
-													<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="collapsed">
-														<i class="fa fa-html5"></i>HTML5/CSS3
+													<a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" >
+														<i class="fa fa-html5"></i>Content Developers
 													</a>
 												</h4>
 											</div>
 											<div id="collapseThree" class="panel-collapse collapse">
 												<div class="panel-body">
-													Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+													The content developer works with scientific education team to map scientific material competencies and skills, topics, objectives, and assessment materials into program design matrixes to demonstrate that information is timely updated. Design and develop assessment activities, including assessment questions, simulations and reusable objects and templates using a variety of tools and applications. Validating contents for accuracy and usability using support communications and ensure adherence to goals set by the scientific project management and education team to find out the right place for the placement of contents in the website to develop the reachability and act as a traffic manager for the scientific web content and various scientific education events.
+												</div>
+											</div>
+										</div>
+										<div class="panel panel-default">
+											<div class="panel-heading">
+												<h4 class="panel-title">
+													<a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" class="collapsed">
+														<i class="fa fa-html5"></i>Interns
+													</a>
+												</h4>
+											</div>
+											<div id="collapseFour" class="panel-collapse collapse">
+												<div class="panel-body">
+													Help build best of breed technology plaform. This site should be a goto site for people wanting to know or use genomics. Ultimate aim is to do our part in finding a cure for cancer
 												</div>
 											</div>
 										</div>
@@ -806,27 +818,6 @@
 								</div>
 							</div>
 							<br>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- section end -->
-
-			<!-- section start -->
-			<!-- ================ -->
-			<div class="section parallax light-translucent-bg parallax-bg-3">
-				<div class="container">
-					<div class="call-to-action">
-						<div class="row">
-							<div class="col-md-8">
-								<h1 class="title text-center">Clean &amp; Powerful Bootstrap Theme</h1>
-								<p class="text-center">Sed ut Perspiciatis Unde Omnis Iste Sed ut sit  voluptatem accusan tium </p>
-							</div>
-							<div class="col-md-4">
-								<div class="text-center">
-									<a href="#" class="btn btn-default btn-lg">Purchase</a>
-								</div>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -840,9 +831,9 @@
 					<div class="row">
 						<div class="col-md-12">
 
-							<h1 class="text-center">Why Choose Solivar</h1>
+							<h1 class="text-center">Why Choose Solivar Labs?</h1>
 							<div class="separator"></div>
-							<p class="lead text-center">Integrating results from diverse experiments is an essential process in our effort to understand the logic of complex systems, such as development, homeostasis and responses to the environment. With the advent of high-throughput methods - including genome-wide association studies (GWAS), ChIP-Seq, and RNA-Seq, etc., - acquisition of genome-scale data has never been easier. Epigenetics, transcriptomics, proteomics and genomics each provide an insightful, and yet single-dimensional, view of genome function; integrative analysis promises a unified, global view. However, the large amount of information and diverse technology platforms pose multiple challenges for data access and processing. </p>
+							<p align="justify">Integrating results from diverse experiments is an essential process in our effort to understand the logic of complex systems, such as development, homeostasis and responses to the environment. With the advent of high-throughput methods - including genome-wide association studies (GWAS), ChIP-Seq, and RNA-Seq, etc., - acquisition of genome-scale data has never been easier. Epigenetics, transcriptomics, proteomics and genomics each provide an insightful, and yet single-dimensional, view of genome function; integrative analysis promises a unified, global view. However, the large amount of information and diverse technology platforms pose multiple challenges for data access and processing. </p>
 							
 							<!-- Tabs start -->
 							<!-- ================ -->
