--- a/index.html
+++ b/index.html
@@ -751,10 +751,10 @@
 											<img src="images/people.png" alt="">
 										</div>
 										<div class="col-md-6">
-											<p>Quo soluta provident, quod reiciendis. Dolores nam totam aut illum ex ratione harum molestias maxime minima tempore, possimus, laudantium. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+											<p>The mission of Solivar Labs is to develop people for bioinformatics, genomics, and related life science technologies and to foster technology utilization and  improvement through multidisciplinary research activities on technology with an aim to find a cure for cancer in our lifetime</p>
 										</div>
 									</div>
-									<p>Esse sequi veniam, assumenda voluptate necessitatibus ipsa dicta vero, minima natus cum cupiditate magnam et placeat quo adipisci.</p>
+									<p>If you share the passion, have a desire of making a difference and help change the world as we know it, then consider joining Solivar Labs</p>
 								</div>
 								<div class="col-md-6">
 									<div class="panel-group panel-dark" id="accordion">
@@ -768,7 +768,9 @@
 											</div>
 											<div id="collapseOne" class="panel-collapse collapse in">
 												<div class="panel-body">
-													We are seeking candidates with a research program in the area of experimental genomics (or other -omic areas) with a significant computational, statistical or modeling component. Candidates should have a significant interest in education and be dedicated to becoming an excellent undergraduate teacher. The successful candidate will be expected to teach courses that contribute to the integration of computational and quantitative approaches curriculum. These may include lecture and laboratory courses in introductory biology, molecular biology, and genetics/genomics. In addition, the successful candidate will develop a vigorous, externally funded, experimental research program involving undergraduate students. A Ph.D. is required and postdoctoral research experience is highly desirable. Applicants should submit a cover letter, curriculum vitae, a 2-page statement of teaching experience and interests, a 2-page statement of externally-fundable research plans, and three letters of recommendation as PDF files. Application materials should explicitly address how the applicant’s teaching and research will take advantage of the unique  teaching model offered by the Solivar Labs.
+													<p>
+														We are seeking candidates with a research program in the area of experimental genomics (or other -omic areas) with a significant computational, statistical or modeling component. Candidates should have a significant interest in education and be dedicated to becoming an excellent undergraduate teacher. The successful candidate will be expected to teach courses that contribute to the integration of computational and quantitative approaches curriculum. These may include lecture and laboratory courses in introductory biology, molecular biology, and genetics/genomics. In addition, the successful candidate will develop a vigorous, externally funded, experimental research program involving undergraduate students. A Ph.D. is required and postdoctoral research experience is highly desirable. Applicants should submit a cover letter, curriculum vitae, a 2-page statement of teaching experience and interests, a 2-page statement of externally-fundable research plans, and three letters of recommendation as PDF files. Application materials should explicitly address how the applicant’s teaching and research will take advantage of the unique  teaching model offered by the Solivar Labs.
+													</p>
 												</div>
 											</div>
 										</div>
@@ -833,7 +835,7 @@
 
 							<h1 class="text-center">Why Choose Solivar Labs?</h1>
 							<div class="separator"></div>
-							<p align="justify">Integrating results from diverse experiments is an essential process in our effort to understand the logic of complex systems, such as development, homeostasis and responses to the environment. With the advent of high-throughput methods - including genome-wide association studies (GWAS), ChIP-Seq, and RNA-Seq, etc., - acquisition of genome-scale data has never been easier. Epigenetics, transcriptomics, proteomics and genomics each provide an insightful, and yet single-dimensional, view of genome function; integrative analysis promises a unified, global view. However, the large amount of information and diverse technology platforms pose multiple challenges for data access and processing. </p>
+							<p >Integrating results from diverse experiments is an essential process in our effort to understand the logic of complex systems, such as development, homeostasis and responses to the environment. With the advent of high-throughput methods - including genome-wide association studies (GWAS), ChIP-Seq, and RNA-Seq, etc., - acquisition of genome-scale data has never been easier. Epigenetics, transcriptomics, proteomics and genomics each provide an insightful, and yet single-dimensional, view of genome function; integrative analysis promises a unified, global view. However, the large amount of information and diverse technology platforms pose multiple challenges for data access and processing. </p>
 							
 							<!-- Tabs start -->
 							<!-- ================ -->
