--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>Solivar | Genomics</title>
+		<title>Genomic Labs</title>
 		<meta name="description" content="iDea a Bootstrap-based, Responsive HTML5 Template">
 		<meta name="author" content="htmlcoder.me">
 
@@ -745,7 +745,7 @@
 						<div class="col-md-12">
 							<h1 class="text-center">Jobs / Interns</h1>
 							<div class="separator"></div>
-							<p class="lead text-center">Solivar Labs is looking for teachers and interns to build and shape an environment that would help create an ecosystem that will encourage and find a cure for cancer.</p>
+							<p class="lead text-center">Genomic Labs is looking for teachers and interns to build and shape an environment that would help create an ecosystem that will encourage and find a cure for cancer.</p>
 							<br>
 							<div class="row">
 								<div class="col-md-6">
@@ -755,10 +755,10 @@
 											<img src="images/people.png" alt="">
 										</div>
 										<div class="col-md-6">
-											<p>The mission of Solivar Labs is to develop people for bioinformatics, genomics, and related life science technologies and to foster technology utilization and  improvement through multidisciplinary research activities on technology with an aim to find a cure for cancer in our lifetime</p>
+											<p>The mission of Genomic Labs is to develop people for bioinformatics, genomics, and related life science technologies and to foster technology utilization and  improvement through multidisciplinary research activities on technology with an aim to find a cure for cancer in our lifetime</p>
 										</div>
 									</div>
-									<p>If you share the passion, have a desire of making a difference and help change the world as we know it, then consider joining Solivar Labs</p>
+									<p>If you share the passion, have a desire of making a difference and help change the world as we know it, then consider joining Genomic Labs</p>
 								</div>
 								<div class="col-md-6">
 									<div class="panel-group panel-dark" id="accordion">
@@ -773,7 +773,7 @@
 											<div id="collapseOne" class="panel-collapse collapse in">
 												<div class="panel-body">
 													<p>
-														We are seeking candidates with a research program in the area of experimental genomics (or other -omic areas) with a significant computational, statistical or modeling component. Candidates should have a significant interest in education and be dedicated to becoming an excellent undergraduate teacher. The successful candidate will be expected to teach courses that contribute to the integration of computational and quantitative approaches curriculum. These may include lecture and laboratory courses in introductory biology, molecular biology, and genetics/genomics. In addition, the successful candidate will develop a vigorous, externally funded, experimental research program involving undergraduate students. A Ph.D. is required and postdoctoral research experience is highly desirable. Applicants should submit a cover letter, curriculum vitae, a 2-page statement of teaching experience and interests, a 2-page statement of externally-fundable research plans, and three letters of recommendation as PDF files. Application materials should explicitly address how the applicant’s teaching and research will take advantage of the unique  teaching model offered by the Solivar Labs.
+														We are seeking candidates with a research program in the area of experimental genomics (or other -omic areas) with a significant computational, statistical or modeling component. Candidates should have a significant interest in education and be dedicated to becoming an excellent undergraduate teacher. The successful candidate will be expected to teach courses that contribute to the integration of computational and quantitative approaches curriculum. These may include lecture and laboratory courses in introductory biology, molecular biology, and genetics/genomics. In addition, the successful candidate will develop a vigorous, externally funded, experimental research program involving undergraduate students. A Ph.D. is required and postdoctoral research experience is highly desirable. Applicants should submit a cover letter, curriculum vitae, a 2-page statement of teaching experience and interests, a 2-page statement of externally-fundable research plans, and three letters of recommendation as PDF files. Application materials should explicitly address how the applicant’s teaching and research will take advantage of the unique  teaching model offered by the Genomic Labs.
 													</p>
 												</div>
 											</div>
@@ -788,7 +788,7 @@
 											</div>
 											<div id="collapseTwo" class="panel-collapse collapse">
 												<div class="panel-body">
-													A part-time Research Scientist position is available with Solivar Labs, a full service diagnostic laboratory that strives to provide cutting edge genomics tests.  As part of the Genomics R&D team the candidate will improve current Next Generation Sequencing (NGS) workflows as well as bring on new technologies and develop novel assays and approaches. The position requires the candidate to engage in fundamental assay development and seamlessly transition their work into the clinical setting. The candidate should be efficient at acquiring new technical skills and driven to see projects through. 
+													A part-time Research Scientist position is available with Genomic Labs, a full service diagnostic laboratory that strives to provide cutting edge genomics tests.  As part of the Genomics R&D team the candidate will improve current Next Generation Sequencing (NGS) workflows as well as bring on new technologies and develop novel assays and approaches. The position requires the candidate to engage in fundamental assay development and seamlessly transition their work into the clinical setting. The candidate should be efficient at acquiring new technical skills and driven to see projects through. 
 												</div>
 											</div>
 										</div>
@@ -837,7 +837,7 @@
 					<div class="row">
 						<div class="col-md-12">
 
-							<h1 class="text-center">Why Choose Solivar Labs?</h1>
+							<h1 class="text-center">Why Choose Genomic Labs?</h1>
 							<div class="separator"></div>
 							<p >Integrating results from diverse experiments is an essential process in our effort to understand the logic of complex systems, such as development, homeostasis and responses to the environment. With the advent of high-throughput methods - including genome-wide association studies (GWAS), ChIP-Seq, and RNA-Seq, etc., - acquisition of genome-scale data has never been easier. Epigenetics, transcriptomics, proteomics and genomics each provide an insightful, and yet single-dimensional, view of genome function; integrative analysis promises a unified, global view. However, the large amount of information and diverse technology platforms pose multiple challenges for data access and processing. </p>
 							
