--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 								<!-- logo -->
 								<div class="logo">
-									<a href="index.html"><img id="logo" src="images/logo_solivar.png" alt="solivar" width="160" height="64"></a>
+									<a href="index.html"><img id="logo" src="images/logo_Genomic Labs.png" alt="Genomic Labs" width="160" height="64"></a>
 								</div>
 
 								<!-- name-and-slogan -->
@@ -704,27 +704,27 @@
 							<div class="col-md-12">
 								<h1 class="text-center title">Products & Services</h1>
 								<div class="separator"></div>
-								<p class="text-center">Solivar Products and Services are focused in developing technologies and people for Next Generation Genomics</p>
+								<p class="text-center">Genomic Labs Products and Services are focused in developing technologies and people for Next Generation Genomics</p>
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="0">
 											<i class="fa fa-leaf"></i>
 											<h2>Products</h2>
-											<p> Solivar's selects technologies, products and people to “create a best of breed informatics organization” from the basics of biology and genetics to application of semantic technologies. Through modeling, case studies, and best practice examples, our products will demonstrate techniques on how to combine data in a meaningful way. </p>
+											<p> Genomic Labs's selects technologies, products and people to “create a best of breed informatics organization” from the basics of biology and genetics to application of semantic technologies. Through modeling, case studies, and best practice examples, our products will demonstrate techniques on how to combine data in a meaningful way. </p>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="200">
 											<i class="fa fa-laptop"></i>
 											<h2>Research Assistance</h2>
-											<p>Solivar can help you first create proposal ideas through the illumination of important research issues within most topic areas. We can then provide you with a thorough literature review that can be used as the foundation for specific research questions or hypotheses. We also offer consultation on appropriate methodological procedures and statistical techniques; Processing and analysis of statistical data and Written drafts of Methodology and Results. </p>
+											<p>Genomic Labs can help you first create proposal ideas through the illumination of important research issues within most topic areas. We can then provide you with a thorough literature review that can be used as the foundation for specific research questions or hypotheses. We also offer consultation on appropriate methodological procedures and statistical techniques; Processing and analysis of statistical data and Written drafts of Methodology and Results. </p>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="400">
 											<i class="fa fa-sitemap"></i>
 											<h2>Training</h2>
-											<p> Building people for Genomics is one of the main focus for Solivar. We have special training for students </p>
+											<p> Building people for Genomics is one of the main focus for Genomic Labs. We have special training for students </p>
 										</div>
 									</div>
 								</div>
