--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 								<!-- logo -->
 								<div class="logo">
-									<a href="index.html"><img id="logo" src="images/logo_Genomic Labs.png" alt="Genomic Labs" width="160" height="64"></a>
+									<a href="index.html"><img id="logo" src="images/logo_GenomicLabs.jpg" alt="Genomic Labs" width="160" height="64"></a>
 								</div>
 
 								<!-- name-and-slogan -->
