--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if !IE]><!-->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-71597566-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <html lang="en">
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>Genomic Labs</title>
+		<title>GenomicLabs</title>
 		<meta name="description" content="iDea a Bootstrap-based, Responsive HTML5 Template">
 		<meta name="author" content="htmlcoder.me">
 
@@ -81,14 +91,13 @@
 
 								<!-- logo -->
 								<div class="logo">
-									<a href="index.html"><img id="logo" src="images/logo_GenomicLabs.jpg" alt="Genomic Labs" width="160" height="64"></a>
+									<a href="index.html"><img id="logo" src="images/logo_GenomicLabs.jpg" alt="GenomicLabs" width="160" height="64"></a>
 								</div>
 
 								<!-- name-and-slogan -->
-								<div class="site-slogan">
-									Next Generation Genomics
-								</div>
-
+									<div class="site-slogan">
+										Next Generation Genomics
+									</div>
 							</div>
 							<!-- header-left end -->
 
@@ -704,27 +713,27 @@
 							<div class="col-md-12">
 								<h1 class="text-center title">Products & Services</h1>
 								<div class="separator"></div>
-								<p class="text-center">Genomic Labs Products and Services are focused in developing technologies and people for Next Generation Genomics</p>
+								<p class="text-center">GenomicLabs Products and Services are focused in developing technologies and people for Next Generation Genomics</p>
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="0">
 											<i class="fa fa-leaf"></i>
 											<h2>Products</h2>
-											<p> Genomic Labs's selects technologies, products and people to “create a best of breed informatics organization” from the basics of biology and genetics to application of semantic technologies. Through modeling, case studies, and best practice examples, our products will demonstrate techniques on how to combine data in a meaningful way. </p>
+											<p> GenomicLabs selects technologies, products and people to “create a best of breed informatics organization” from the basics of biology and genetics to application of semantic technologies. Through modeling, case studies, and best practice examples, our products will demonstrate techniques on how to combine data in a meaningful way. </p>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="200">
 											<i class="fa fa-laptop"></i>
 											<h2>Research Assistance</h2>
-											<p>Genomic Labs can help you first create proposal ideas through the illumination of important research issues within most topic areas. We can then provide you with a thorough literature review that can be used as the foundation for specific research questions or hypotheses. We also offer consultation on appropriate methodological procedures and statistical techniques; Processing and analysis of statistical data and Written drafts of Methodology and Results. </p>
+											<p>GenomicLabs can help you first create proposal ideas through the illumination of important research issues within most topic areas. We can then provide you with a thorough literature review that can be used as the foundation for specific research questions or hypotheses. We also offer consultation on appropriate methodological procedures and statistical techniques; Processing and analysis of statistical data and Written drafts of Methodology and Results. </p>
 										</div>
 									</div>
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="400">
 											<i class="fa fa-sitemap"></i>
 											<h2>Training</h2>
-											<p> Building people for Genomics is one of the main focus for Genomic Labs. We have special training for students </p>
+											<p> Building people for Genomics is one of the main focus for GenomicLabs. We have special training for students </p>
 										</div>
 									</div>
 								</div>
@@ -745,7 +754,7 @@
 						<div class="col-md-12">
 							<h1 class="text-center">Jobs / Interns</h1>
 							<div class="separator"></div>
-							<p class="lead text-center">Genomic Labs is looking for teachers and interns to build and shape an environment that would help create an ecosystem that will encourage and find a cure for cancer.</p>
+							<p class="lead text-center">GenomicLabs is looking for teachers and interns to build and shape an environment that would help create an ecosystem that will encourage and find a cure for cancer.</p>
 							<br>
 							<div class="row">
 								<div class="col-md-6">
@@ -755,10 +764,10 @@
 											<img src="images/people.png" alt="">
 										</div>
 										<div class="col-md-6">
-											<p>The mission of Genomic Labs is to develop people for bioinformatics, genomics, and related life science technologies and to foster technology utilization and  improvement through multidisciplinary research activities on technology with an aim to find a cure for cancer in our lifetime</p>
+											<p>The mission of GenomicLabs is to develop people for bioinformatics, genomics, and related life science technologies and to foster technology utilization and  improvement through multidisciplinary research activities on technology with an aim to find a cure for cancer in our lifetime</p>
 										</div>
 									</div>
-									<p>If you share the passion, have a desire of making a difference and help change the world as we know it, then consider joining Genomic Labs</p>
+									<p>If you share the passion, have a desire of making a difference and help change the world as we know it, then consider joining GenomicLabs</p>
 								</div>
 								<div class="col-md-6">
 									<div class="panel-group panel-dark" id="accordion">
@@ -773,7 +782,7 @@
 											<div id="collapseOne" class="panel-collapse collapse in">
 												<div class="panel-body">
 													<p>
-														We are seeking candidates with a research program in the area of experimental genomics (or other -omic areas) with a significant computational, statistical or modeling component. Candidates should have a significant interest in education and be dedicated to becoming an excellent undergraduate teacher. The successful candidate will be expected to teach courses that contribute to the integration of computational and quantitative approaches curriculum. These may include lecture and laboratory courses in introductory biology, molecular biology, and genetics/genomics. In addition, the successful candidate will develop a vigorous, externally funded, experimental research program involving undergraduate students. A Ph.D. is required and postdoctoral research experience is highly desirable. Applicants should submit a cover letter, curriculum vitae, a 2-page statement of teaching experience and interests, a 2-page statement of externally-fundable research plans, and three letters of recommendation as PDF files. Application materials should explicitly address how the applicant’s teaching and research will take advantage of the unique  teaching model offered by the Genomic Labs.
+														We are seeking candidates with a research program in the area of experimental genomics (or other -omic areas) with a significant computational, statistical or modeling component. Candidates should have a significant interest in education and be dedicated to becoming an excellent undergraduate teacher. The successful candidate will be expected to teach courses that contribute to the integration of computational and quantitative approaches curriculum. These may include lecture and laboratory courses in introductory biology, molecular biology, and genetics/genomics. In addition, the successful candidate will develop a vigorous, externally funded, experimental research program involving undergraduate students. A Ph.D. is required and postdoctoral research experience is highly desirable. Applicants should submit a cover letter, curriculum vitae, a 2-page statement of teaching experience and interests, a 2-page statement of externally-fundable research plans, and three letters of recommendation as PDF files. Application materials should explicitly address how the applicant’s teaching and research will take advantage of the unique  teaching model offered by the GenomicLabs.
 													</p>
 												</div>
 											</div>
@@ -788,7 +797,7 @@
 											</div>
 											<div id="collapseTwo" class="panel-collapse collapse">
 												<div class="panel-body">
-													A part-time Research Scientist position is available with Genomic Labs, a full service diagnostic laboratory that strives to provide cutting edge genomics tests.  As part of the Genomics R&D team the candidate will improve current Next Generation Sequencing (NGS) workflows as well as bring on new technologies and develop novel assays and approaches. The position requires the candidate to engage in fundamental assay development and seamlessly transition their work into the clinical setting. The candidate should be efficient at acquiring new technical skills and driven to see projects through. 
+													A part-time Research Scientist position is available with GenomicLabs, a full service diagnostic laboratory that strives to provide cutting edge genomics tests.  As part of the Genomics R&D team the candidate will improve current Next Generation Sequencing (NGS) workflows as well as bring on new technologies and develop novel assays and approaches. The position requires the candidate to engage in fundamental assay development and seamlessly transition their work into the clinical setting. The candidate should be efficient at acquiring new technical skills and driven to see projects through. 
 												</div>
 											</div>
 										</div>
@@ -837,7 +846,7 @@
 					<div class="row">
 						<div class="col-md-12">
 
-							<h1 class="text-center">Why Choose Genomic Labs?</h1>
+							<h1 class="text-center">Why Choose GenomicLabs?</h1>
 							<div class="separator"></div>
 							<p >Integrating results from diverse experiments is an essential process in our effort to understand the logic of complex systems, such as development, homeostasis and responses to the environment. With the advent of high-throughput methods - including genome-wide association studies (GWAS), ChIP-Seq, and RNA-Seq, etc., - acquisition of genome-scale data has never been easier. Epigenetics, transcriptomics, proteomics and genomics each provide an insightful, and yet single-dimensional, view of genome function; integrative analysis promises a unified, global view. However, the large amount of information and diverse technology platforms pose multiple challenges for data access and processing. </p>
 							
