--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 								<!-- logo -->
 								<div class="logo">
-									<a href="index.html"><img id="logo" src="images/logo_GenomicLabs.jpg" alt="GenomicLabs" width="160" height="64"></a>
+									<a href="index.html"><img id="logo" src="images/logo_GenomicLabs.jpg" alt="GenomicLabs" ></a>
 								</div>
 
 								<!-- name-and-slogan -->
@@ -762,6 +762,7 @@
 									<div class="row">
 										<div class="col-md-6">
 											<img src="images/people.png" alt="">
+											<h10>credit: https://openclipart.org/detail/99271/meeting </h10>
 										</div>
 										<div class="col-md-6">
 											<p>The mission of GenomicLabs is to develop people for bioinformatics, genomics, and related life science technologies and to foster technology utilization and  improvement through multidisciplinary research activities on technology with an aim to find a cure for cancer in our lifetime</p>
