updated home page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<header class="header fixed clearfix">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-3">
+						<div class="col-md-3 col-sm-3 sol-xs-9">
 
 							<!-- header-left start -->
 							<!-- ================ -->
@@ -97,7 +97,7 @@
 							<!-- header-left end -->
 
 						</div>
-						<div class="col-md-9">
+						<div class="col-md-9 col-sm-9 col-xs-12">
 
 							<!-- header-right start -->
 							<!-- ================ -->
@@ -294,12 +294,13 @@
 
 								<!-- LAYER NR. 11 -->
 								<div class="tp-caption sfr tp-resizeme"
+									data-hoffset="-50"
 									data-x="right"
 									data-y="center" 
 									data-speed="600"
 									data-start="2700"
 									data-end="9400"
-									data-endspeed="600"><img src="images/g-geo-genes-dia04DNA.gif" alt="">
+									data-endspeed="600"><img src="images/g-geo-genes-dia04DNA.gif" alt="" width="330" height="330">
 								</div>
 
 								</li>
@@ -413,6 +414,7 @@
 
 								<!-- LAYER NR. 11 -->
 								<div class="tp-caption sfr tp-resizeme"
+									data-hoffset="-100"
 									data-x="right"
 									data-y="center" 
 									data-speed="600"
@@ -532,6 +534,7 @@
 
 								<!-- LAYER NR. 11 -->
 								<div class="tp-caption sfr tp-resizeme"
+									data-hoffset="-100"
 									data-x="right"
 									data-y="center" 
 									data-speed="600"
@@ -650,7 +653,7 @@
 
 								<!-- LAYER NR. 11 -->
 								<div class="tp-caption sfr"
-									data-x="right" data-hoffset="-370"
+									data-x="right" data-hoffset="-320"
 									data-y="center" 
 									data-speed="600"
 									data-start="2700"
@@ -659,7 +662,7 @@
 									data-autoplayonlyfirsttime="false"
 									data-nextslideatend="true">
 									<div class="embed-responsive embed-responsive-16by9">
-									<iframe class="embed-responsive-item" src='https://www.youtube.com/embed/dKubyIRiN84?enablejsapi=1&amp;html5=1&amp;hd=1&amp;wmode=opaque&amp;controls=1&amp;showinfo=0;rel=0;' width='640' height='360' style='width:350px;height:240px;'></iframe>
+									<iframe class="embed-responsive-item" src='https://www.youtube.com/embed/dKubyIRiN84?enablejsapi=1&amp;html5=1&amp;hd=1&amp;wmode=opaque&amp;controls=1&amp;showinfo=0;rel=0;' width='640' height='360' style='width:280px;height:200px;'></iframe>
 									</div>
 								</div>
 
