images in slider

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 									data-speed="600"
 									data-start="2700"
 									data-end="9400"
-									data-endspeed="600"><img src="images/slider-1-layer-1.png" alt="">
+									data-endspeed="600"><img src="images/rna_ribonucleic_acid_sm.jpg" alt="" width="251" height="201">
 								</div>
 
 								</li>
@@ -540,7 +540,7 @@
 									data-speed="600"
 									data-start="2700"
 									data-end="9400"
-									data-endspeed="600"><img src="images/slider-1-layer-2.png" alt="">
+									data-endspeed="600"><img src="images/chromosome_sm.jpg" alt="" width="259" height="195">
 								</div>
 
 								</li>
