--- a/index.html
+++ b/index.html
@@ -845,9 +845,11 @@
 					<div class="row">
 						<div class="col-md-12">
 
-							<h1 class="text-center">Why Choose GenomicLabs?</h1>
+							<h1 class="text-center">About GenomicLabs?</h1>
 							<div class="separator"></div>
-							<p >Integrating results from diverse experiments is an essential process in our effort to understand the logic of complex systems, such as development, homeostasis and responses to the environment. With the advent of high-throughput methods - including genome-wide association studies (GWAS), ChIP-Seq, and RNA-Seq, etc., - acquisition of genome-scale data has never been easier. Epigenetics, transcriptomics, proteomics and genomics each provide an insightful, and yet single-dimensional, view of genome function; integrative analysis promises a unified, global view. However, the large amount of information and diverse technology platforms pose multiple challenges for data access and processing. </p>
+							<p >GenomicLabs is a not for profit organization, focussed on doing our part in finding a cure for cancer in our lifetime. </p>
+							<p>GenomicLabs plans to achieve this by building a community of subject matter experts in bioinformatics and providing support to research organizations to verify and or augment their bioinformatics capabilities.
+ 							</p>
 							
 							<!-- Tabs start -->
 							<!-- ================ -->
