--- a/index.html
+++ b/index.html
@@ -845,12 +845,20 @@
 					<div class="row">
 						<div class="col-md-12">
 
-							<h1 class="text-center">About GenomicLabs?</h1>
+							<h1 class="text-center">About GenomicLabs</h1>
 							<div class="separator"></div>
 							<p >GenomicLabs is a not for profit organization, focussed on doing our part in finding a cure for cancer in our lifetime. </p>
 							<p>GenomicLabs plans to achieve this by building a community of subject matter experts in bioinformatics and providing support to research organizations to verify and or augment their bioinformatics capabilities.
  							</p>
-							
+							<b>The problems as we see them</b>
+								<ul>Inadequate compute and talent to handle BioInformatics</ul>
+								<ul>Most research not verified by third party organizations</ul>
+								<ul>Biologists/Genomicists lack talent to do BioInformatics themselves</ul>
+							<b>Proposed solution</b>
+								<ul>Create a talent pool that can handle BioInformatics</ul>
+								<ul>Verify and provide a seal of approval</ul>
+								<ul>Augment or outsource BioInformatics to Scientists</ul>
+
 							<!-- Tabs start -->
 							<!-- ================ -->
 							<div class="vertical hc-tabs">
