--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 													</li>													
 													<!-- mega-menu start -->
 													<li class=" mega-menu">
-														<a href="#products" class="get_link dropdown-toggle">Products & Services</a>
+														<a href="#products" class="get_link dropdown-toggle">Services</a>
 														
 													</li>
 													<!-- mega-menu end -->
@@ -709,14 +709,14 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-12">
-								<h1 class="text-center title">Products & Services</h1>
+								<h1 class="text-center title">Services</h1>
 								<div class="separator"></div>
-								<p class="text-center">GenomicLabs Products and Services are focused in developing technologies and people for Next Generation Genomics</p>
+								<p class="text-center">GenomicLabs' Services are focused in developing technologies and people for Next Generation Genomics</p>
 								<div class="row">
 									<div class="col-sm-4">
 										<div class="box-style-1 white-bg object-non-visible" data-animation-effect="fadeInUpSmall" data-effect-delay="0">
 											<i class="fa fa-leaf"></i>
-											<h2>Products</h2>
+											<h2>People & Technology</h2>
 											<p> GenomicLabs selects technologies, products and people to “create a best of breed informatics organization” from the basics of biology and genetics to application of semantic technologies. Through modeling, case studies, and best practice examples, our products will demonstrate techniques on how to combine data in a meaningful way. </p>
 										</div>
 									</div>
